[gd_scene load_steps=4 format=2]

[ext_resource path="res://Code/SceneManager.tscn" type="PackedScene" id=1]
[ext_resource path="res://Code/SceneExplorer.gd" type="Script" id=2]

[sub_resource type="Theme" id=1]

[node name="DemoScene" type="Node2D"]

[node name="SceneExplorer" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 750.0
margin_bottom = 550.0
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="SceneExplorer"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0.470588, 0.470588, 1 )

[node name="GridContainer" type="GridContainer" parent="SceneExplorer/ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="GridScene" type="Control" parent="SceneExplorer/ColorRect/GridContainer"]

[node name="ColorRect" type="ColorRect" parent="SceneExplorer/ColorRect/GridContainer/GridScene"]
margin_left = 10.0
margin_top = 10.0
margin_right = 600.0
margin_bottom = 80.0
color = Color( 0.235294, 0.611765, 0.658824, 1 )

[node name="Image" type="TextureRect" parent="SceneExplorer/ColorRect/GridContainer/GridScene"]
margin_left = 15.0
margin_top = 15.0
margin_right = 95.0
margin_bottom = 75.0

[node name="Title" type="Label" parent="SceneExplorer/ColorRect/GridContainer/GridScene"]
margin_left = 100.0
margin_top = 15.0
margin_right = 150.0
margin_bottom = 29.0
rect_min_size = Vector2( 300, 25 )
rect_scale = Vector2( 1.8, 1.8 )
size_flags_stretch_ratio = 1.93
theme = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Scene Title"

[node name="ItemCounts" type="Label" parent="SceneExplorer/ColorRect/GridContainer/GridScene"]
margin_left = 100.0
margin_top = 40.0
margin_right = 150.0
margin_bottom = 29.0
rect_min_size = Vector2( 100, 0 )
theme = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Images:
Audio:"

[node name="ItemDetail" type="Label" parent="SceneExplorer/ColorRect/GridContainer/GridScene"]
margin_left = 200.0
margin_top = 40.0
margin_right = 150.0
margin_bottom = 29.0
rect_min_size = Vector2( 100, 0 )
theme = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Characters:
Variables:"

[node name="SceneManager" parent="SceneExplorer" instance=ExtResource( 1 )]
